# homora-labs

./: .gitignore  README.md  bugs.md  prd.md  progress.md
backend/: pyproject.toml  verify_imports.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_upgrade_embedding_dimension.py  0fe10ec32c1b_add_debug_info_to_messages.py  250ea8a213cc_add_txt_to_filetype_enum.py  8f9d3f1a2b6c_add_soft_delete_and_branching.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  chunk.py  conversation.py  document.py  message.py  project.py  report_template.py  settings.py
backend/app/prompts/: system.py
backend/app/routers/: __init__.py  chat.py  documents.py  projects.py  reports.py  search.py  settings.py
backend/app/schemas/: __init__.py  chat.py  document.py  project.py  report.py  search.py  settings.py  trash.py
backend/app/services/: embeddings.py  export.py  reports.py  retrieval.py  search.py
backend/app/services/ingestion/: __init__.py  categorizer.py  chunker.py  extractors.py  pipeline.py  vision.py
backend/app/services/llm/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
backend/tests/: test_api.py
docs/plans/: 2026-02-07-conversation-document-history-design.md
frontend/: package-lock.json  package.json  tailwind.config.js  vitest.config.ts
mock files/: 09_Commercial_Lease_Agreement.txt  10_Phase_I_ESA_Report.txt  11_Summary_Appraisal_Report.txt  12_Annual_Operating_Statement.txt
testsprite_tests/: TC006_Conversation_Message_Edit_and_Branching.py  TC007_Soft_Delete_Restore_and_Purge_Conversations.py  TC008_Soft_Delete_Restore_and_Purge_Documents.py  standard_prd.json  testsprite-mcp-test-report.md  testsprite_frontend_test_plan.json
(+45 files in other folders)
